feat: add option pages and difficulty selection

--- a/mainPage.html
+++ b/mainPage.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mainPage.css">
     <title>Main Page</title>
 </head>
 <body>
     <div class="container">
-        <div id="game-mood">
+        <div class="game-mood">
             <h2>Choose Difficulty Level</h2>
-            <button onclick="selectDifficulty('easy')">Easy</button>
-            <button onclick="selectDifficulty('medium')">Medium</button>
-            <button onclick="selectDifficulty('difficult')">Difficult</button>
+            <button onclick="selectDifficulty('easy')">Easy</button><br><br>
+            <button onclick="selectDifficulty('medium')">Medium</button><br><br>
+            <button onclick="selectDifficulty('difficult')">Difficult</button><br><br>
         </div>
     </div>
     
