fix: implement user-specific game state and reset logic on game over

--- a/mainPage.html
+++ b/mainPage.html
@@ -13,6 +13,9 @@
             <button onclick="selectDifficulty('easy')">Easy</button><br><br>
             <button onclick="selectDifficulty('medium')">Medium</button><br><br>
             <button onclick="selectDifficulty('difficult')">Difficult</button><br><br>
+
+            <button onclick="backPage()" id="back" style="width:auto;">Back</button>
+
         </div>
     </div>
     
