--- a/options.html
+++ b/options.html
@@ -6,14 +6,18 @@
     <link rel="stylesheet" href="options.css">
     <title>Options Page</title>
 </head>
-
 <body>
     <div class="option-cards">
         <div class="options">
-            <h2>Options</h2>
-            <button onclick="selectOptions('game')">New Game</button><br><br>
-            <button onclick="selectOptions('scoreTable')">Score Table</button><br><br>
-            <button onclick="selectOptions('exit')">Exit</button><br><br>
+            <h2>Game Options</h2>
+            <button onclick="selectOptions('game')">New Game</button>
+            <br><br>
+            <button onclick="selectOptions('continueGame')">Continue Game</button>
+            <br><br>
+            <button onclick="selectOptions('scoreTable')">Score Table</button>
+            <br><br>
+            <button onclick="selectOptions('exit')">Exit</button>
+            <br><br>
         </div>
     
     </div>
