--- a/login.html
+++ b/login.html
@@ -11,8 +11,9 @@
         <div class="grid">
             <h2>Login</h2>
             <form id="loginForm">
-                <input type="text" id="username" placeholder="Username" required><br><br>
-                <input type="password" id="password" placeholder="Password" required><br><br>
+                <input type="text" id="username" placeholder="Username" list ="userSuggestion" required><br><br>
+                <datalist id="userSuggestion"></datalist>
+                <input type="password" id="password" placeholder="Password" list="passSuggestion" required><br><br>
                 <button type="submit" value="Login">Login</button>
             </form>
             
